--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
+add_compile_options(-std=c++11)
 project(subtitle_manipulate)
 
-include_directories(./)
-file(GLOB SOURCES "*.cpp" 
-                    "app/*.cpp")
+include_directories(./SubtitleManipulation/)
+file(GLOB SOURCES "SubtitleManipulation/*.cpp" 
+                    "SubtitleManipulation/app/impl/*.cpp")
+
 add_executable(subtitle_manipulate ${SOURCES})
